--- a/index.html
+++ b/index.html
@@ -10,13 +10,10 @@
 </head>
 <body>
   <div id="app">
-    <h1>{{ person.name }}</h1>
-    <h1>{{ sayHi('Morgen') }}</h1>
-    <h1><a :href="website">Gehe zu Google</a></h1>
-    
-    <p v-html="atag"></p>
-
-    <input type="text" :value="person.name">
+    <h3>{{ myValue }}</h3>
+    <button v-on:click="add" v-on:mouseover="add">+</button>
+    <button v-on:click="subtract" v-on:mouseover="subtract">-</button>
+    <button v-on:click.once="add">1mal +</button>
   </div>
 
   <script src="app.js"></script>
