--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 </head>
 <body>
   <div id="app">
-    <input type="text" v-model="name">
-    <p v-if="name.length > 6">Ist sicher!</p>
-    <p v-else-if="name.length < 6">Ist nicht sicher</p>
-    <p v-else>Gerade noch so!</p> 
+    <p v-for="name in names">{{ name }}</p>
+    <template v-for="(person, index) in persons" :key="index">
+      <div v-for="(value, key) in person">
+        <p>{{ value }}</p>
+        <p>{{ key }}</p>
+      </div>
+    </template>
   </div>
 
   <script src="app.js"></script>
